// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Add Remove Button Button 1`] = `
<button
  className="is-primary sc-dnqmqq chRfrq"
  onClick={[Function]}
>
  <span
    className="cross"
  />
  <span
    className="sc-htoDjs cwgOKV"
  >
    Add
     
    Bork bork bork
  </span>
</button>
`;

exports[`Storyshots AvatarOption Elvis 1`] = `
<div
  className="sc-gzVnrw icItGV"
>
  <div
    className="sc-EHOje kezrng"
  >
    <img
      alt="Gravatar image for elvis@example.com"
      className="avatar sc-bZQynM fISQDW"
      src="https://www.gravatar.com/avatar/73bd673a3291d9a3ea9857b773f75440?d=blank"
    />
    <div
      aria-hidden={true}
      className="sc-ifAKCX fpssdM"
    >
      EP
    </div>
  </div>
  <span>
    Elvis Presley
  </span>
</div>
`;

exports[`Storyshots Content Pricing Free content 1`] = `
<div
  className="sc-iwsKbI cOgVcU"
>
  <div>
    <div
      className="sc-gZMcBi efiAfs"
    >
      <span
        className="sc-htoDjs cwgOKV"
      >
        Your price
      </span>
       
      <span
        className="sc-VigVT dNwqKl"
      >
        Free
      </span>
    </div>
    <div
      className="sc-fjdhpX qOSTm"
    >
      <span
        className="sc-jTzLTM cCWbUt"
      >
        $
        174.95
      </span>
       (
      100
      % savings)
    </div>
  </div>
</div>
`;

exports[`Storyshots Content Pricing Free content, missing list price 1`] = `
<div
  className="sc-iwsKbI cOgVcU"
>
  <div>
    <div
      className="sc-gZMcBi efiAfs"
    >
      <span
        className="sc-htoDjs cwgOKV"
      >
        Your price
      </span>
       
      <span
        className="sc-VigVT dNwqKl"
      >
        Free
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Content Pricing Has all information 1`] = `
<div
  className="sc-iwsKbI cOgVcU"
>
  <div>
    <div
      className="sc-gZMcBi efiAfs"
    >
      <span
        className="sc-htoDjs cwgOKV"
      >
        Your price
      </span>
       
      <span
        className="sc-VigVT dNwqKl"
      >
        $74.99
      </span>
    </div>
    <div
      className="sc-fjdhpX qOSTm"
    >
      <span
        className="sc-jTzLTM cCWbUt"
      >
        $
        174.95
      </span>
       (
      57
      % savings)
    </div>
  </div>
</div>
`;

exports[`Storyshots Content Pricing Missing both prices (why do we allow this?) 1`] = `
<div>
  <div
    aria-hidden={true}
  >
    N/A
  </div>
  <div
    className="aural"
  >
    Pricing not available
  </div>
</div>
`;

exports[`Storyshots Content Pricing Missing list price 1`] = `
<div
  className="sc-iwsKbI cOgVcU"
>
  <div>
    <div
      className="sc-gZMcBi efiAfs"
    >
      <span
        className="sc-htoDjs cwgOKV"
      >
        Your price
      </span>
       
      <span
        className="sc-VigVT dNwqKl"
      >
        $74.99
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Content Pricing Missing offer price 1`] = `
<div>
  <div
    aria-hidden={true}
  >
    N/A
  </div>
  <div
    className="aural"
  >
    Pricing not available
  </div>
</div>
`;

exports[`Storyshots Loading Loading 1`] = `
<div
  className="sc-jzJRlG bcBVzQ"
>
  Loading
  ...
</div>
`;

exports[`Storyshots ModalPortal (Confirm modal) Base props 1`] = `
<div
  className="sc-cSHVUG hUIgmO"
  tabIndex="0"
>
  <main
    className="sc-kAzzGY ejqPxt"
  >
    <button
      aria-label="Close"
      className="sc-chPdSV gzRpJx"
      onClick={[Function]}
    />
    <div
      className="sc-kGXeez kfohyH"
    >
      <h1>
        Would you like a cookie?
      </h1>
      <p>
        They are very tasty
      </p>
    </div>
    <div
      className="sc-kgoBCf cpBZLm"
    >
      <button
        onClick={[Function]}
      >
        No
      </button>
      <button
        onClick={[Function]}
      >
        Yes
      </button>
    </div>
  </main>
</div>
`;

exports[`Storyshots ModalPortal (Confirm modal) With custom labeling 1`] = `
<div
  className="sc-cSHVUG hUIgmO"
  tabIndex="0"
>
  <main
    className="sc-kAzzGY ejqPxt"
  >
    <button
      aria-label="Close"
      className="sc-chPdSV gzRpJx"
      onClick={[Function]}
    />
    <div
      className="sc-kGXeez kfohyH"
    >
      <h1>
        Would you like a cookie?
      </h1>
      <p>
        They are very tasty
      </p>
    </div>
    <div
      className="sc-kgoBCf cpBZLm"
    >
      <button
        onClick={[Function]}
      >
        Bork
      </button>
      <button
        onClick={[Function]}
      >
        Bork bork bork
      </button>
    </div>
  </main>
</div>
`;

exports[`Storyshots Order Tool Tooltip We hardcoded this text for some reason 1`] = `
<div
  className="sc-bxivhb fBaQSp"
>
  <div
    className="ra-tooltip-wrapper sc-htpNat fBuvaI"
    id="ra-tooltip-1"
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="tooltip"
  >
    <div
      aria-hidden={true}
      className="bottom ra-tooltip sc-bwzfXH hTcOXv"
    >
      <div
        className="sc-bdVaJa hYeCwI ra-tooltip-message"
      >
        <p>
          A content request is a way to submit a title for consideration to be added to the catalog.
        </p>
      </div>
    </div>
    <svg
      aria-describedby="ra-tooltip-1"
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      role="img"
      style={Object {}}
      tabIndex={0}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Pagination On Page 1 1`] = `
<div
  className="sc-kpOJdX lgchly"
>
  <div>
    <button
      className="sc-dxgOiQ cflSXG"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="svg-inline--fa fa-angle-left fa-w-8 "
        data-icon="angle-left"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 256 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="sc-htoDjs cwgOKV"
      >
        Previous page
      </span>
    </button>
  </div>
  <div>
    Page 
    1
     of 
    2
  </div>
  <div>
    <button
      className="sc-dxgOiQ cflSXG"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="svg-inline--fa fa-angle-right fa-w-8 "
        data-icon="angle-right"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 256 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="sc-htoDjs cwgOKV"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Pagination doensn't have next, on Page 1 1`] = `null`;

exports[`Storyshots Pagination doensn't have next, on Page 2 1`] = `
<div
  className="sc-kpOJdX lgchly"
>
  <div>
    <button
      className="sc-dxgOiQ cflSXG"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="svg-inline--fa fa-angle-left fa-w-8 "
        data-icon="angle-left"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 256 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="sc-htoDjs cwgOKV"
      >
        Previous page
      </span>
    </button>
  </div>
  <div>
    Page 
    2
     of 
    2
  </div>
  <div>
    <button
      className="sc-dxgOiQ cflSXG"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="svg-inline--fa fa-angle-right fa-w-8 "
        data-icon="angle-right"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 256 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="sc-htoDjs cwgOKV"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Pagination hasNext, on Page 2 1`] = `
<div
  className="sc-kpOJdX lgchly"
>
  <div>
    <button
      className="sc-dxgOiQ cflSXG"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="svg-inline--fa fa-angle-left fa-w-8 "
        data-icon="angle-left"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 256 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="sc-htoDjs cwgOKV"
      >
        Previous page
      </span>
    </button>
  </div>
  <div>
    Page 
    2
     of 
    3
  </div>
  <div>
    <button
      className="sc-dxgOiQ cflSXG"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="svg-inline--fa fa-angle-right fa-w-8 "
        data-icon="angle-right"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 256 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="sc-htoDjs cwgOKV"
      >
        Next page
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots ToggleHandle Toggleable handle 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <div
    className="sc-ckVGcZ hYkLcI"
    onClick={[Function]}
  />
</div>
`;
